--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,14 @@
 	<meta name="author" content="">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- UNCOMMENT when a favicon is added to the root of src/ -->
+	<!-- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> -->
 	<title></title>
 	<link rel="stylesheet" href="/stylesheets/css/master.css">
 	<script src='/js/master.js' defer></script>
 </head>
 
 <body>
-	
+
 </body>
 </html>
